docs/1.34/get-started/01-setting-up-prisma-new-database-GO-g002.mdx
import QueryChooser from 'components/Markdown/QueryChooser'
import Code from 'components/Markdown/Code'
import Collapse from 'components/Markdown/Collapse'
import Info from 'components/Markdown/Info'

export const meta = {
  title: 'Set up Prisma',
  position: 1,
  gettingStartedOrder: 1,
  gettingStartedTitle: 'New database',
  nextText: 'Great work! 👏  Move on to learn how you can change your datamodel and (re-)generate your Prisma client.',
  technology: 'go',
  technologyOrder: 4,
  articleGroup: 'Set up Prisma',
}

## Goals

On this page, you will learn how to:

- Install the Prisma CLI
- Set up Prisma using Docker
- Configure your Prisma API
- Generate the Prisma client
- Read and write data using the Prisma client


<Info>

Looking for the new [**Prisma Framework**](https://github.com/prisma/prisma2) (formerly called _Prisma 2_)? It makes using Prisma even simpler by removing the need to host the Prisma server. Check out the database client [Photon.js](https://github.com/prisma/photonjs) and the declarative data modeling / migration tool [Lift](https://github.com/prisma/lift).

<br />

The best way to get started is by following the step-by-step [tutorial](https://github.com/prisma/prisma2/blob/master/docs/tutorial.md) or exploring the ready-to-run [examples](https://github.com/prisma/prisma1-examples/tree/prisma2). Note that the Prisma Framework is not production-ready yet, you can track its development on [isprisma2ready.com](https://isprisma2ready.com). Note that Photon is not yet available in Go, you can learn more about the planned API and feature set in the [technical specification](https://github.com/prisma/specs/blob/feat/photon-go/photongo/Readme.md).

</Info>

## Install the Prisma CLI

The [Prisma CLI](alx4) is used for various Prisma workflows. You can install it using [Homebrew](https://brew.sh/) or [NPM](https://www.npmjs.com/):

<Code languages={["Homebrew", "NPM"]}>

```bash copy
brew tap prisma/prisma
brew install prisma
```

```bash copy
npm install -g prisma
```

</Code>

## Install Docker

To use Prisma locally, you need to have [Docker](https://www.docker.com) installed on your machine. If you don't have Docker yet, you can download the Docker Community Edition for your operating system [here](https://www.docker.com/community-edition).

> Don't want to use Docker? Check out the new [Prisma Framework](https://github.com/prisma/prisma2/) which removes the need to host the Prisma server.

## Set up and connect Prisma with a database

### Create new directory

```bash copy
mkdir hello-world
cd hello-world
```

### Create Docker Compose file

To launch Prisma on your machine, you need a [Docker Compose file](https://docs.docker.com/compose/compose-file/) that configures Prisma and specifies the database it can connect to.

```bash copy
touch docker-compose.yml
```

### Add Prisma and database Docker images

Paste the following contents into the Docker Compose file you just created:

<Code languages={["MySQL", "PostgreSQL", "MongoDB"]}>

```yml copy
version: '3'
services:
  prisma:
    image: prismagraphql/prisma:1.34
    restart: always
    ports:
    - "4466:4466"
    environment:
      PRISMA_CONFIG: |
        port: 4466
        databases:
          default:
            connector: mysql
            host: mysql
            port: 3306
            user: root
            password: prisma
  mysql:
    image: mysql:5.7
    restart: always
    environment:
      MYSQL_ROOT_PASSWORD: prisma
    volumes:
      - mysql:/var/lib/mysql
volumes:
  mysql: ~
```

```yml copy
version: '3'
services:
  prisma:
    image: prismagraphql/prisma:1.34
    restart: always
    ports:
    - "4466:4466"
    environment:
      PRISMA_CONFIG: |
        port: 4466
        databases:
          default:
            connector: postgres
            host: postgres
            port: 5432
            user: prisma
            password: prisma
  postgres:
    image: postgres:10.3
    restart: always
    environment:
      POSTGRES_USER: prisma
      POSTGRES_PASSWORD: prisma
    volumes:
      - postgres:/var/lib/postgresql/data
volumes:
  postgres: ~
```

```yml copy
version: '3'
services:
  prisma:
    image: prismagraphql/prisma:1.34
    restart: always
    ports:
    - "4466:4466"
    environment:
      PRISMA_CONFIG: |
        port: 4466
        databases:
          default:
            connector: mongo
            uri: mongodb://prisma:prisma@mongo
  mongo:
    image: mongo:3.6
    restart: always
    environment:
      MONGO_INITDB_ROOT_USERNAME: prisma
      MONGO_INITDB_ROOT_PASSWORD: prisma
    ports:
      - "27017:27017"
    volumes:
      - mongo:/var/lib/mongo
volumes:
  mongo: ~
```

</Code>

> You can switch between **MySQL**, **PostgreSQL** and **MongoDB** by using the tabs above the code block.

### Launch Prisma and the connected database

To start Prisma and launch the connected database, run the following command:

```bash copy
docker-compose up -d
```

Prisma is now connected to a local database and runs on `http://localhost:4466`.

<Collapse title="Securing your Prisma server">

The Prisma server is currently _unprotected_, meaning everyone with access to its endpoint can send arbitrary requests to it. To secure the Prisma server, you need to set the `managementApiSecret` property in your Docker Compose file when deploying the server. 

When using the Prisma CLI, you then need to set the `PRISMA_MANAGEMENT_API_SECRET` to the same value so that the CLI can authenticate against the secured server. Learn more [here](kke4).

</Collapse>

## Configure your Prisma API

To bootstrap the configuration files for your Prisma client run the following command:

```bash copy
prisma init --endpoint http://localhost:4466
```

> The `endpoint` needs to match the URL of a running Prisma server.

## Deploy the Prisma datamodel

The `prisma init` command created the _minimal_ setup needed to deploy the Prisma datamodel: `prisma.yml` and `datamodel.prisma`.

<Collapse title="Expand if you're using MongoDB">

The MongoDB connector uses a [new datamodel format](b6a7) than the currently supported SQL databases. The datamodel and `prisma.yml` need to be configured specifically for MongoDB.

Add the `databaseType` property to `prisma.yml` so that it looks as follows:

<Code lines={["3"]}>

```yml
endpoint: http://localhost:4466
datamodel: datamodel.prisma
databaseType: document
```

</Code>

Now adjust `datamodel.prisma` to use the new directives:

```graphql
type User {
  id: ID! @id
  name: String!
}
```

</Collapse>

With these configuration files, you can now _deploy_ the Prisma API:

```bash copy
prisma deploy
```

Congratulations, you have successfully set up Prisma. You can now start using the Prisma client to talk to your database from code.

<Info>

In the new [Prisma Framework](https://github.com/prisma/prisma2/), schema migrations are performed using a standalone tool called [Lift](https://github.com/prisma/lift). Learn more in the [Prisma Framework tutorial](https://github.com/prisma/prisma2/blob/master/docs/tutorial.md).

</Info>

## View and edit your data in Prisma Admin

If you want to view and edit the data in your database, you can use [Prisma Admin](el3e). To access Prisma Admin, you need to append `/_admin` to your Prisma endpoint, for example: `http://localhost:4466/_admin`.

## Generate your Prisma client

<Info>

In the new [Prisma Framework](https://github.com/prisma/prisma2/), the Prisma client is turned into a standalone tool called [Photon](https://photonjs.prisma.io/). Note that Photon is not yet available in Go, you can learn more about the planned API and feature set in the [technical specification](https://github.com/prisma/specs/blob/feat/photon-go/photongo/Readme.md).

</Info>

The Prisma client is a custom, auto-generated library that connects to your Prisma API. Append the following lines to the end of your `prisma.yml`:

```yml copy
generate:
  - generator: go-client
    output: ./generated/prisma-client/
```

Now generate the client with this command:

```bash copy
prisma generate
```

The CLI now stored your Prisma client inside the `./generated/prisma-client/` directory as specified in `prisma.yml`.

## Prepare Go application

```bash copy
touch index.go
```

You'll be using [dep](https://golang.github.io/dep/) for dependency management in this tutorial. Run the following command to create the required setup:

```bash copy
dep init
```

Great, you're now ready to write some code and talk to your database programmatically!

## Read and write data using the Prisma client

Add the following code in `index.go`:

```go copy
package main

import (
	"context"
	"fmt"
	prisma "hello-world/generated/prisma-client"
)

func main() {
	client := prisma.New(nil)
	ctx := context.TODO()

	// Create a new user
	name := "Alice"
	newUser, err := client.CreateUser(prisma.UserCreateInput{
		Name: name,
	}).Exec(ctx)
	if err != nil {
		panic(err)
	}
	fmt.Printf("Created new user: %+v\\n", newUser)

	users, err := client.Users(nil).Exec(ctx)
	if err != nil {
		panic(err)
	}
	fmt.Printf("%+v\\n", users)
}
```

Before executing the script, you need to _ensure_ all dependencies are available. Run the following command:

```bash copy
dep ensure
```

Now execute the script with the following command:

```bash copy
go run index.go
```

Whenever you run the script with that command, a new user record is created in the database (because of the call to `createUser`).

Feel free to play around with the Prisma client API and try out some of the following operations by adding the following code snippets to the file (at the end of the `main` function) and re-executing the script:

<QueryChooser titles={["Fetch single user", "Filter user list", "Update a user's name", "Delete user"]}>

```go lineNumbers,copy
id := "__USER_ID__"
userById, err := client.User(prisma.UserWhereUniqueInput{
  ID: &id,
}).Exec(ctx)
```

```go lineNumbers,copy
filter := "Alice"
posts, err := client.Users(&prisma.UsersParams{
  Where: &prisma.UserWhereInput{
    Name: &filter,
  },
}).Exec(ctx)
```

```go lineNumbers,copy
id := "__USER_ID__"
newName := "Bob"
updatedUser, err := client.UpdateUser(prisma.UserUpdateParams{
  Where: prisma.UserWhereUniqueInput{
    ID: &id,
  },
  Data: prisma.UserUpdateInput{
    Name: &newName,
  },
}).Exec(ctx)
```

```go lineNumbers,copy
id := "__USER_ID__"
deletedUser, err := client.DeleteUser(prisma.UserWhereUniqueInput{
  ID: &id,
}).Exec(ctx)
```

</QueryChooser>


> In some snippets, you need to replace the `__USER__ID__` placeholder with the ID of an actual user.
